--- a/src/Assignment-1/assignment1.html
+++ b/src/Assignment-1/assignment1.html
@@ -13,7 +13,40 @@
 
 	<!-- This is just a comment. Ignore this line.-->
 	<!-- Start your code from here -->
-	
+	<div class="top">
+		<div class="top-left" >
+		<ul>
+			<li>mango</li>
+			
+			<li>Pineapple</li>
+			<li>Guava
+				<ul>
+					<li>1</li>
+					<li>2</li>
+				</ul>
+			</li>
+		</ul>
+		
+		</div>
+		<div class="top-right"><img src="Batman.jpg"  alt="image"></div>
+
+	</div>
+
+
+
+	<div class="bottom">
+		<div class="bottom-left"><img src="Batman.jpg"  alt="image"></div>
+		
+			<div class="bottom-right" >
+			<h1>tHIS IS THE BOTTOM RIGHT PART</h1>
+			
+			</div>
+			
+
+
+
+
+	</div>
 	
 	<!-- End your code -->
 
