--- a/src/Assignment-2/assignment2.html
+++ b/src/Assignment-2/assignment2.html
@@ -74,7 +74,7 @@
 			</aside>
 		</div>
 	
-	<footer class="foot"><p id="page-footer">"Sed ut perspiciatis unde omnis iste natus error
+	<footer class="foot"><p id="page-footer">"Sed utopia perspiciatis unde omnis iste natus error
 		 sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
 		  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
 		   vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit 
