--- a/src/Assignment-3/assignment3.html
+++ b/src/Assignment-3/assignment3.html
@@ -12,6 +12,32 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
+	<div class="top-wrapper">
+		<div class="top-left">
+			<form name="top_form">
+				<h1>this is top heading</h1>
+				<p>Some paragraph</p>
+				<button type="button">Click me</button>
+				</form>
+		</div>
+		<div class="top-right">
+			<iframe id="render-wiki" src="https://en.wikipedia.org/wiki/Main_Page" title="top-wiki"></iframe>
+		</div>
+	</div>
+	<div class="bottom-wrapper">
+		<div class="bottom-top">
+			<form name="bottom_form">
+			<h1>this is bottom heading</h1>
+			<p>Some paragraph</p>
+			<button type="button">Click me</button>
+			</form>
+		</div>
+		<div class="bottom-down">
+			<iframe id="render-dictionary" src="https://www.dictionary.com/" title="top-wiki"></iframe>
+		</div>
+
+
+	</div>
 	
 	<!-- End your code -->
 
