--- a/src/Assignment-2/assignment2.html
+++ b/src/Assignment-2/assignment2.html
@@ -18,7 +18,7 @@
 		<div class="logo">
 		<img src="logo.jpg" alt="logo" /></div>
 		<div class="search"><form>
-			<input type="text" placeholder="search">
+			<input type="text" name="search" placeholder="search">
 		</form></div>
 		</div>
 
