--- a/src/Assignment-1/assignment1.html
+++ b/src/Assignment-1/assignment1.html
@@ -38,7 +38,7 @@
 		<div class="bottom-left"><img src="Batman.jpg"  alt="image"></div>
 		
 			<div class="bottom-right" >
-			<h1>tHIS IS THE BOTTOM RIGHT PART</h1>
+			<h1>This  IS THE BOTTOM RIGHT PART .some heading</h1>
 			
 			</div>
 			
