--- a/src/Assignment-3/assignment3.html
+++ b/src/Assignment-3/assignment3.html
@@ -21,7 +21,8 @@
 				</form>
 		</div>
 		<div class="top-right">
-			<iframe id="render-wiki" src="https://en.wikipedia.org/wiki/Main_Page" title="top-wiki"></iframe>
+			<!-- <iframe id="render-wiki" src="https://en.wikipedia.org/wiki/Main_Page" title="top-wiki"></iframe> -->
+			<iframe id="render-wiki" src="#" title="top-wiki"></iframe>
 		</div>
 	</div>
 	<div class="bottom-wrapper">
@@ -33,7 +34,8 @@
 			</form>
 		</div>
 		<div class="bottom-down">
-			<iframe id="render-dictionary" src="https://www.dictionary.com/" title="top-wiki"></iframe>
+			<!-- <iframe id="render-dictionary" src="https://www.dictionary.com/" title="top-wiki"></iframe> -->
+			<iframe id="render-dictionary" src="#" title="top-wiki"></iframe>
 		</div>
 
 
