--- a/src/Assignment-4/assignment4.html
+++ b/src/Assignment-4/assignment4.html
@@ -42,7 +42,8 @@
 				harum porro, illo, sed ducimus reprehenderit esse quo quidem.
 			Maiores consectetur ratione quis soluta cupiditate quos voluptatum quibusdam unde
 			 officia obcaecati, aliquam velit, laudantium libero asperiores iusto repellendus 
-			 inventore! Sit magnam ipsum explicabo adipisci. </p>
+			 inventore! Sit magnam ipsum explicabo adipisci. 
+			</p>
 				   <a class="btn" href="https://en.wikipedia.org/wiki/Dog">Link One</a>
 		</article>
 		<article class="three-col">
