--- a/src/Assignment-4/assignment4.html
+++ b/src/Assignment-4/assignment4.html
@@ -37,12 +37,11 @@
 		<article class="three-col">
 			<h3 id="Home">Home</h3>
 			<img src="images/Dog2.jpg"/>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ad facere 
-				laboriosam voluptatum. Ex, odit magni nihil ipsam iure voluptates veniam 
-				harum porro, illo, sed ducimus reprehenderit esse quo quidem.
-			Maiores consectetur ratione quis soluta cupiditate quos voluptatum quibusdam unde
-			 officia obcaecati, aliquam velit, laudantium libero asperiores iusto repellendus 
-			 inventore! Sit magnam ipsum explicabo adipisci. 
+			<p>"Lorem ipsum dolor sit amet, consectetur 
+				adipiscing elit, sed do eiusmod tempor
+				 incididunt ut labore et dolore magna aliqua.
+				  Ut enim ad minim veniam, quis nostrud exercitation
+				   ullamco laboris nisi ut aliquip ex ea commodo consequat.  
 			</p>
 				   <a class="btn" href="https://en.wikipedia.org/wiki/Dog">Link One</a>
 		</article>
