--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -10,10 +10,44 @@
 
 <body>
 	<div id="container">
-
+		
 	<!-- Start your code from here -->
-	
+	<div class="wrapper">
+	<div class="card">
 
+		<div class="image-wrapper">
+			<img class="img1" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png"/>
+
+		</div>
+		<div class="main-content">
+			<h1>A Leafy One</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+				Facilis eius quaerat laborum repudiandae.
+				 Quibusdam odio officia atque nisi in quidem fugiat blanditiis, 
+				 ratione, quasi nesciunt odit. Eos fuga a praesentium.sed quia non
+				  numquam eius modi</p>
+				 <a class="btn" href="#">So Leafy</a>
+		</div>
+	</div>
+	<div class="card">
+
+		<div class="image-wrapper">
+			<img class="img2" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png"/>
+
+		</div>
+		<div class="main-content">
+			<h1>Some Pointy Ones</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+				Facilis eius quaerat laborum repudiandae.
+				 Quibusdam odio officia atque nisi in quidem fugiat blanditiis, 
+				 ratione, quasi nesciunt odit. Eos fuga a praesentium.sed quia non
+				  numquam eius modi
+				</p>
+			<a class="btn" href="#">I'll take to</a>
+		</div>
+	</div>
+</div>
+	
 	<!-- End your code -->
 
 	</div>
